# RDT

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  DEVELOPMENT.rst  HISTORY.md  INSTALL.md  LICENSE  Makefile  README.md  RELEASE.md  Untitled.ipynb  check.ipynb  latest_requirements.txt  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  static_code_analysis.txt  tasks.py  testing.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  auto_assign.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: new_transformer.md
.github/workflows/: integration.yml  lint.yml  minimum.yml  performance.yml  prepare_release.yml  publish.yml  publish_download_tracker.yml  quality.yml  readme.yml  release.yml  release_notes.yml  static_code_analysis.yml  tests.yml  unit.yml
conda/: README.md  meta.yaml
dataprep/: hyper_transformer.py  utils.py
dataprep/transformers/: CatTransformer.py  DTTransformer.py  NumberTransformer.py  __init__.py
docs/: Makefile  conf.py  development.rst  index.rst  installation.rst  make.bat  usage.rst
examples/: airbnb.py
rdt/: __init__.py  _addons.py  _utils.py  cli.py  errors.py  hyper_transformer.py  utils.py
rdt/performance/: __init__.py  performance.py  profiling.py
rdt/performance/datasets/: __init__.py  base.py  boolean.py  categorical.py  datetime.py  id.py  numerical.py  pii.py  text.py
rdt/transformers/: BaseTransformer.py  CatTransformer.py  DTTransformer.py  NullTransformer.py  NumberTransformer.py  __init__.py  _validations.py  _validators.py  base.py  bayes_gmm.py  bayesian_gmm.py  boolean.py  categorical.py  category.py  datetime.py  generator.py  id.py  null.py  number.py  numerical.py  positive_number.py  text.py  utils.py
rdt/transformers/addons/: README.md  addons_setup.py  import_addons.py
rdt/transformers/addons/identity/: __init__.py  config.json  identity.py
rdt/transformers/pii/: __init__.py  anonymization.py  anonymizer.py  faker.py  utils.py
scripts/: create_download_tracker.py  release_notes_generator.py
scripts/rdt-download-tracker/: README.md  index.html  pyproject.toml  requirements.txt
scripts/rdt-download-tracker/rdt_download_tracker/: __init__.py
tests/: DTTransformerTest.py  __init__.py  code_style.py  contributing.py  test___init__.py  test_hyper_transformer.py  test_rdt.py
tests/data/: missing_datetime.csv  normal_datetime.csv
tests/data/airbnb/: airbnb_meta.json  sessions_demo.csv  users_demo.csv
tests/data/datetime/: missing.csv  missing.json  normal.csv  normal.json
tests/datasets/: __init__.py  base.py  boolean.py  categorical.py  datetime.py  numerical.py  utils.py
tests/datasets/tests/: test_boolean.py  test_categorical.py  test_datetime.py  test_numerical.py  test_utils.py
tests/integration/: __init__.py  test_hyper_transformer.py  test_transformers.py  testing.py
tests/integration/transformers/: __init__.py  test.py  test_base.py  test_boolean.py  test_categorical.py  test_datetime.py  test_id.py  test_numerical.py  test_text.py
tests/integration/transformers/addons/identity/: test_indentity.py
tests/integration/transformers/pii/: __init__.py  test_anonymization.py  test_anonymizer.py  test_faker.py
tests/performance/: README.md  __init__.py  profiler.py  profiling.py  test_performance.py
tests/performance/datasets/: __init__.py  base.py  boolean.py  categorical.py  datetime.py  example_generator.py  numerical.py
tests/performance/test_cases/: constant_boolean_1000_test.json  constant_boolean_nans_1000_test.json  random_boolean_1000_test.json  random_boolean_nans_1000_test.json  random_numerical_1000_test.json  random_skewed_boolean_1000_test.json  random_skewed_boolean_nans_1000_test.json
tests/performance/test_cases/boolean/BooleanTransformer/: default_ConstantBooleanGenerator_100000_100000.json  default_ConstantBooleanGenerator_10000_10000.json  default_ConstantBooleanGenerator_1000_1000.json  default_ConstantBooleanNaNsGenerator_100000_100000.json  default_ConstantBooleanNaNsGenerator_10000_10000.json  default_ConstantBooleanNaNsGenerator_1000_1000.json  default_RandomBooleanGenerator_100000_100000.json  default_RandomBooleanGenerator_10000_10000.json  default_RandomBooleanGenerator_1000_1000.json  default_RandomBooleanNaNsGenerator_100000_100000.json  default_RandomBooleanNaNsGenerator_10000_10000.json  default_RandomBooleanNaNsGenerator_1000_1000.json  (+24 more)
tests/performance/tests/: __init__.py  example_test_config.json  test_profiling.py
tests/performance/tests/datasets/: test_boolean.py  test_categorical.py  test_datetime.py  test_numerical.py  test_utils.py
tests/quality/: __init__.py  dataset_info.csv  test_quality.py  utils.py
tests/quality/datasets/: adult.csv
tests/rdt/: test_hypertransformer.py
tests/rdt/transformers/: DTTransformerTest.py  test_CatTransformer.py  test_DTTransformer.py  test_NullTransformer.py  test_NumberTransformer.py  test_category.py  test_datetime.py  test_null.py  test_number.py  test_positive_number.py  test_rdt.py
tests/transformers/: _test_category.py  test___init__.py  test_base.py  test_boolean.py  test_categorical.py  test_datetime.py  test_null.py  test_number.py  test_numerical.py
tests/unit/: __init__.py  db.py  test___init__.py  test__addons.py  test__utils.py  test_hyper_transformer.py  test_profiling.py
tests/unit/transformers/: __init__.py  test___init__.py  test__validations.py  test__validators.py  test_base.py  test_bayes_gmm.py  test_boolean.py  test_categorical.py  test_datetime.py  test_generator.py  test_id.py  test_null.py  test_numerical.py  test_text.py  test_utils.py
tests/unit/transformers/addons/: __init__.py
tests/unit/transformers/pii/: __init__.py  test_anonymization.py  test_anonymizer.py  test_faker.py  test_utils.py
transformer/: hyper_transformer.py  transformer.py  utils.py
transformer/transformers/: BaseTransformer.py  CatTransformer.py  DTTransformer.py  DT_Transformer.py  NumberTransformer.py  __init__.py  datetime_transformer.py
(+301 files in other folders)
